fix: hide summary marker on safari for price filter

--- a/src/components/filters.module.css
+++ b/src/components/filters.module.css
@@ -28,6 +28,10 @@
   display: none;
 }
 
+.priceFilterStyle summary::-webkit-details-marker {
+  display: none; /* hide the summary arrow on safari */
+}
+
 .priceFilterStyle summary {
   list-style: none;
 }
